--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -59,6 +59,7 @@
     "chakra-react-select": "^4.4.3",
     "codemirror": "6.0.1",
     "cuid": "3.0.0",
+    "date-fns": "^2.29.3",
     "deep-object-diff": "1.1.9",
     "dequal": "2.0.3",
     "emails": "workspace:*",
