--- a/packages/emails/package.json
+++ b/packages/emails/package.json
@@ -19,17 +19,20 @@
     "@types/nodemailer": "6.4.7",
     "@types/react": "18.0.27",
     "concurrently": "7.6.0",
+    "eslint": "8.32.0",
+    "eslint-config-custom": "workspace:*",
     "http-server": "14.1.1",
     "nodemailer": "6.9.1",
     "react": "18.2.0",
+    "tsconfig": "workspace:*",
     "tsx": "3.12.2",
-    "utils": "workspace:*",
-    "eslint": "8.32.0",
-    "eslint-config-custom": "workspace:*",
-    "tsconfig": "workspace:*"
+    "utils": "workspace:*"
   },
   "peerDependencies": {
     "@faire/mjml-react": "2.1.4",
     "nodemailer": "6.7.8"
+  },
+  "dependencies": {
+    "mjml": "^4.13.0"
   }
 }
