--- a/package.json
+++ b/package.json
@@ -33,5 +33,12 @@
       "path": "node_modules/cz-emoji"
     }
   },
-  "packageManager": "pnpm@7.27.1"
+  "packageManager": "pnpm@7.27.1",
+  "dependencies": {
+    "mjml": "^4.13.0",
+    "mjml-react": "^2.0.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "uglify-js": "^3.17.4"
+  }
 }
