--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -35,6 +35,7 @@
     "@giphy/react-components": "6.5.2",
     "@googleapis/drive": "4.0.1",
     "@lezer/css": "^1.1.1",
+    "@paralleldrive/cuid2": "2.0.1",
     "@sentry/nextjs": "7.36.0",
     "@stripe/stripe-js": "1.46.0",
     "@tanstack/react-query": "^4.23.0",
@@ -58,9 +59,9 @@
     "canvas-confetti": "1.6.0",
     "chakra-react-select": "^4.4.3",
     "codemirror": "6.0.1",
+    "cookies-next": "^2.1.1",
     "cuid": "3.0.0",
     "date-fns": "^2.29.3",
-    "@paralleldrive/cuid2": "2.0.1",
     "deep-object-diff": "1.1.9",
     "dequal": "2.0.3",
     "emails": "workspace:*",
@@ -74,6 +75,7 @@
     "immer": "9.0.19",
     "js-video-url-parser": "0.5.1",
     "jsonwebtoken": "9.0.0",
+    "jwt-decode": "^3.1.2",
     "micro": "10.0.1",
     "micro-cors": "0.1.1",
     "minio": "7.0.32",
