--- a/apps/builder/.env.local.example
+++ b/apps/builder/.env.local.example
@@ -2,6 +2,7 @@ DATABASE_URL=postgresql://postgres:typebot@localhost:5432/typebot
 ENCRYPTION_SECRET=SgVkYp2s5v8y/B?E(H+MbQeThWmZq4t6 #256-bits secret (can be generated here: https://www.allkeysgenerator.com/Random/Security-Encryption-Key-Generator.aspx)
 NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_VIEWER_URL=http://localhost:3001
+WHATSFLOW_API_URL=https://api.whatsflow.com.br/v1/
 
 GITHUB_CLIENT_ID=534b549dd17709a743a2
 GITHUB_CLIENT_SECRET=7adb03507504fb1a54422f6c3c697277cfd000a9
