--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -53,6 +53,7 @@
     "@uiw/react-codemirror": "^4.19.16",
     "@use-gesture/react": "^10.2.26",
     "aws-sdk": "2.1369.0",
+    "axios": "^1.4.0",
     "browser-image-compression": "2.0.2",
     "canvas-confetti": "1.6.0",
     "codemirror": "6.0.1",
