--- a/apps/viewer/vercel.json
+++ b/apps/viewer/vercel.json
@@ -2,6 +2,12 @@
     "functions": {
         "pages/api/v1/[...trpc].ts": {
             "maxDuration": 60
+        },
+        "pages/api/**/*": {
+            "maxDuration": 60
+        },
+        "api/**/*": {
+            "maxDuration": 60
         }
     }
 }
