--- a/apps/viewer/vercel.json
+++ b/apps/viewer/vercel.json
@@ -3,10 +3,10 @@
         "pages/api/v1/[...trpc].ts": {
             "maxDuration": 60
         },
-        "pages/api/**/*": {
+        "pages/api/**/*.ts": {
             "maxDuration": 60
         },
-        "api/**/*": {
+        "api/**/*.ts": {
             "maxDuration": 60
         }
     }
