--- a/apps/viewer/vercel.json
+++ b/apps/viewer/vercel.json
@@ -3,6 +3,10 @@
         "pages/api/v1/[...trpc].ts": {
             "memory": 1024,
             "maxDuration": 60
+        },
+        "api/v1/[...trpc].ts": {
+            "memory": 1024,
+            "maxDuration": 60
         }
     }
 }
