--- a/apps/viewer/vercel.json
+++ b/apps/viewer/vercel.json
@@ -7,6 +7,14 @@
         "api/v1/[...trpc].ts": {
             "memory": 1024,
             "maxDuration": 60
+        },
+        "/api/v1/[...trpc]": {
+            "memory": 1024,
+            "maxDuration": 60
+        },
+        "/api/v1/[...trpc].ts": {
+            "memory": 1024,
+            "maxDuration": 60
         }
     }
 }
