--- a/apps/viewer/vercel.json
+++ b/apps/viewer/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-        "/api/v1/[...trpc].ts": {
+        "src/pages/api/v1/[...trpc].ts": {
             "memory": 1024,
             "maxDuration": 60
         }
