--- a/apps/viewer/vercel.json
+++ b/apps/viewer/vercel.json
@@ -3,6 +3,10 @@
         "src/pages/api/v1/[...trpc].ts": {
             "memory": 1024,
             "maxDuration": 60
+        },
+        "src/pages/api/typebots/[typebotId]/blocks/[blockId]/executeWebhook.ts": {
+            "memory": 1024,
+            "maxDuration": 60
         }
     }
 }
