--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     }
   },
   "dependencies": {
+    "date-fns-tz": "^2.0.0",
     "mjml": "^4.13.0",
     "mjml-react": "^2.0.8",
     "react": "^18.2.0",
