--- a/apps/builder/package.json
+++ b/apps/builder/package.json
@@ -38,9 +38,9 @@
     "@trpc/server": "10.34.0",
     "@typebot.io/emails": "workspace:*",
     "@typebot.io/js": "workspace:*",
-    "@typebot.io/react": "workspace:*",
-    "axios": "^1.4.0",
     "@typebot.io/nextjs": "workspace:*",
+    "@typebot.io/react": "workspace:*",
+    "@types/cookie": "^0.6.0",
     "@udecode/plate-basic-marks": "21.1.5",
     "@udecode/plate-common": "^21.1.5",
     "@udecode/plate-core": "21.1.5",
@@ -56,9 +56,11 @@
     "@upstash/redis": "^1.22.0",
     "@use-gesture/react": "^10.2.27",
     "aws-sdk": "2.1415.0",
+    "axios": "^1.4.0",
     "browser-image-compression": "2.0.2",
     "canvas-confetti": "1.6.0",
     "codemirror": "6.0.1",
+    "cookie": "^0.6.0",
     "cookies-next": "^2.1.1",
     "cuid": "3.0.0",
     "date-fns": "^2.29.3",
@@ -72,8 +74,8 @@
     "got": "12.6.0",
     "immer": "10.0.2",
     "js-video-url-parser": "0.5.1",
-    "jwt-decode": "^3.1.2",
     "jsonwebtoken": "9.0.1",
+    "jwt-decode": "^3.1.2",
     "micro": "10.0.1",
     "micro-cors": "0.1.1",
     "minio": "7.1.1",
