--- a/apps/viewer/.env.local.example
+++ b/apps/viewer/.env.local.example
@@ -3,6 +3,7 @@ ENCRYPTION_SECRET=H+KbL/OFrqbEuDy/1zX8bsPG+spXri3S
 NEXT_PUBLIC_VIEWER_URL=http://localhost:3001
 DATABASE_URL=postgresql://postgres:typebot@localhost:5432/typebot
 NEXTAUTH_URL=http://localhost:3000
+TOKEN_WHATSFLOW=
 
 S3_ACCESS_KEY=minio
 S3_SECRET_KEY=minio123
