--- a/package.json
+++ b/package.json
@@ -36,13 +36,15 @@
     "bcrypt": "^5.1.1",
     "builder": "^5.0.0",
     "date-fns-tz": "^2.0.0",
+    "jwt-decode": "^3.1.2",
     "mjml": "^4.13.0",
     "mjml-react": "^2.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.7.1",
-    "uglify-js": "^3.17.4"
+    "uglify-js": "^3.17.4",
+    "viewer": "^0.10.11"
   },
   "packageManager": "pnpm@8.6.12"
 }
