feat: Implementar bloco de assistente IA

--- a/apps/builder/.env.local.example
+++ b/apps/builder/.env.local.example
@@ -5,6 +5,7 @@ ENCRYPTION_SECRET=H+KbL/OFrqbEuDy/1zX8bsPG+spXri3S
 NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_VIEWER_URL=http://localhost:3001
 WHATSFLOW_API_URL=https://api.whatsflow.com.br/v1/
+WHATSFLOW_API_URL_V2=https://app.whatsflow.com.br/ts-api/public-api-v2/
 SECRET_KEY=
 MASTER_PASSWORD=
 
