--- a/apps/viewer/.env.local.example
+++ b/apps/viewer/.env.local.example
@@ -4,7 +4,8 @@ NEXT_PUBLIC_VIEWER_URL=http://localhost:3001
 DATABASE_URL=postgresql://postgres:typebot@localhost:5432/typebot
 NEXTAUTH_URL=http://localhost:3000
 TOKEN_WHATSFLOW=
-
+WHATSFLOW_API_URL=https://api.whatsflow.com.br/v1
+WHATSFLOW_API_URL_V2=https://app.whatsflow.com.br/ts-api/public-api-v2
 S3_ACCESS_KEY=minio
 S3_SECRET_KEY=minio123
 S3_BUCKET=typebot
